Setting up the navigation bar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
 	<body>
   		<div id="header" class="headcenter">
   			<div role="navigation" class="navbar">
-
+          <div class="container">
+            <div class="nav-branding">
+              <a href="/" class="nav-item">
+                <p>CoxxedUpGames</p>
+              </a>
+            </div>
+          </div>
   			</div>
   		</div>
 	</body>
