--- a/index.html
+++ b/index.html
@@ -18,9 +18,19 @@
           <div class="container">
             <div class="nav-branding">
               <a href="/" class="nav-item">
-                <p>CoxxedUpGames</p>
+                <img src="/src/imgs/temporary.png" alt="Coxxed Up Games" width="112" height="28">
               </a>
             </div>
+
+            <div id="nav-menu" class="navbar-menu">
+              <div class="menu-container">
+                <a href="/pages/about/" class="navbar-item">About Us</a>
+                <a href="/pages/projects/" class="navbar-item">Projects</a>
+                <a href="/pages/blog/" class="navbar-item">Blog</a>
+                <a href="/pages/contact/" class="navbar-item">Contact</a>
+              </div>
+            </div>
+
           </div>
   			</div>
   		</div>
