--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
   			<div role="navigation" class="navbar">
           <div class="container">
             <div class="nav-branding">
-              <a href="/" class="nav-item">
+              <a href="/" class="navbar-item">
                 <img src="/src/imgs/temporary.png" alt="Coxxed Up Games" width="112" height="28">
               </a>
             </div>
 
             <div id="nav-menu" class="navbar-menu">
               <div class="menu-container">
-                <a href="/pages/about/" class="navbar-item">About Us</a>
-                <a href="/pages/projects/" class="navbar-item">Projects</a>
-                <a href="/pages/blog/" class="navbar-item">Blog</a>
-                <a href="/pages/contact/" class="navbar-item">Contact</a>
+                <a href="/about/" class="navbar-item">About Us</a>
+                <a href="/projects/" class="navbar-item">Projects</a>
+                <a href="/blog/" class="navbar-item">Blog</a>
+                <a href="/contact/" class="navbar-item">Contact</a>
               </div>
             </div>
 
