--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
   		<meta charset="utf-8">
 
-  		<title>Coxxed Up Games</title>
+  		<title>Home | Coxxed Up Games</title>
   		<meta name="description" content="The HTML5 Herald">
   		<meta name="author" content="SitePoint">
 
@@ -14,25 +14,25 @@
 
 	<body>
   		<div id="header" class="headcenter">
-  			<div role="navigation" class="navbar">
-          <div class="container">
-            <div class="nav-branding">
-              <a href="/" class="navbar-item">
-                <img src="/src/imgs/temporary.png" alt="Coxxed Up Games" width="112" height="28">
-              </a>
-            </div>
+        
+        <!-- Starting the NavBar Element --> 
+  			<div class="navbar">
+          <a href="/">
+            <img src="/src/imgs/temporary.png" class="navbar-brand">
+          </a>
 
-            <div id="nav-menu" class="navbar-menu">
-              <div class="menu-container">
-                <a href="/about/" class="navbar-item">About Us</a>
-                <a href="/projects/" class="navbar-item">Projects</a>
-                <a href="/blog/" class="navbar-item">Blog</a>
-                <a href="/contact/" class="navbar-item">Contact</a>
-              </div>
-            </div>
-
+          <!-- Creating the actual menu for navigating the website -->
+          <div class="navbar-menu">
+            <a id="active" href="/projects/">Projects</a> <!-- Need to remove the active tag from this in the final home page. -->
+            <a href="/contact/">Contact</a>
+            <a href="/blog/">Blog</a>
+            <a href="/other/">Other (Support?)</a>
           </div>
-  			</div>
+          <!-- End of the Menu -->
+
+        </div>
+        <!-- End of the NavBar Element-->
+
   		</div>
 	</body>
 </html>
