--- a/index.html
+++ b/index.html
@@ -16,20 +16,22 @@
   		<div id="header" class="headcenter">
         
         <!-- Starting the NavBar Element --> 
-  			<div class="navbar">
-          <a href="/">
-            <img src="/src/imgs/temporary.png" class="navbar-brand">
-          </a>
+        <div class="container">
+    			<div class="navbar">
+            <a href="/">
+              <img src="/src/imgs/temporary.png" class="navbar-brand">
+            </a>
 
-          <!-- Creating the actual menu for navigating the website -->
-          <div class="navbar-menu">
-            <a id="active" href="/projects/">Projects</a> <!-- Need to remove the active tag from this in the final home page. -->
-            <a href="/contact/">Contact</a>
-            <a href="/blog/">Blog</a>
-            <a href="/other/">Other (Support?)</a>
+            <!-- Creating the actual menu for navigating the website -->
+            <div class="navbar-menu">
+              <a class="navbar-item" id="active" href="/projects/">Projects</a> <!-- Need to remove the active tag from this in the final home page. -->
+              <a class="navbar-item" href="/contact/">Contact</a>
+              <a class="navbar-item" href="/blog/">Blog</a>
+              <a class="navbar-item" href="/other/">Other (Support?)</a>
+            </div>
+            <!-- End of the Menu -->
+
           </div>
-          <!-- End of the Menu -->
-
         </div>
         <!-- End of the NavBar Element-->
 
