--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
         <div class="container">
     			<div class="navbar">
 
+            <!-- Container holding the links for the menu -->
+            <div class="navbar-right">
+              <a href="/projects/" class="navbar-item link">Projects</a>
+              <a href="/about/" class="navbar-item link">About Us</a>
+              <a href="/contact/" class="navbar-item link">Contact</a>
+              <a href="/blog/" class="navbar-item link">Blog</a>  
+            </div>
+            <!-- End of the menu -->
+
           </div>
         </div>
         <!-- End of the NavBar Element-->
