Importing fonts from GoogleAPI and styling navbar links

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   		<meta name="author" content="SitePoint">
 
   		<link rel="stylesheet" href="src/branding.css">
+      <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 
 	</head>
 
