Starting styling for active menu tab

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <!-- Container holding the links for the menu -->
             <div class="navbar-right">
-              <a href="/projects/" class="navbar-item link">Projects</a>
+              <a href="/projects/" class="navbar-item link" id="is-active">Projects</a>
               <a href="/about/" class="navbar-item link">About Us</a>
               <a href="/contact/" class="navbar-item link">Contact</a>
               <a href="/blog/" class="navbar-item link">Blog</a>  
